# batalha-naval

./: README.md  d_232bcb75a7a4aa9a___init___py.html  d_232bcb75a7a4aa9a_game_py.html  d_414da2492ed646a1___init___py.html  d_414da2492ed646a1_ascii_py.html  d_414da2492ed646a1_game_py.html  d_772ab8bd66010273___init___py.html  d_a9ae026b041147cb___init___py.html  d_a9ae026b041147cb_board_py.html  d_a9ae026b041147cb_player_py.html  d_a9ae026b041147cb_ship_py.html  d_b7e0303e310b77d6_test_board_py.html  d_b7e0303e310b77d6_test_player_py.html  d_b7e0303e310b77d6_test_ship_py.html  d_d7e3eb4cd9c6d557_test_game_py.html  index.html  pyproject.toml  status.json
.github/workflows/: ci.workflow.yml
batalha_naval/: __init__.py
batalha_naval/controller/: game.py
batalha_naval/model/: board.py  game.py  player.py  ship.py
batalha_naval/view/: ascii.py  game.py
tests/: test_sum.py
tests/controller/: test_game.py
tests/model/: test_board.py  test_player.py  test_ship.py
